name:                cmaes
version:             0.1.0.0
synopsis:            CMA-ES wrapper in Haskell
description:         
  @cmaes@ is a wrapper for Covariance Matrix Adaptation Evolution
  Strategy(CMA-ES), an evolutionary algorithm for difficult non-linear
  non-convex optimization problems in continuous domain. To use this
  package you need the following: 
  .
    * Python2.  
    * @cma.py@ ,
    Nikolaus Hansen's production-level CMA library.  Download it from
    <http://www.lri.fr/~hansen/cmaes_inmatlab.html#python>.  and place
    it under your Python module search path.
license:             BSD3
license-file:        LICENSE
author:              Takayuki Muranushi
maintainer:          muranushi@gmail.com
category:            Numerical, Optimization, Algorithms
build-type:          Simple
cabal-version:       >=1.8
library
  exposed-modules:   Numeric.Optimization.Algorithms.CMAES  
  -- other-modules:       
  build-depends:       base ==4.*
  
Test-Suite test
  Main-Is:           Test.hs
  Hs-Source-Dirs:    test, .
  Type:              exitcode-stdio-1.0
  Build-Depends:     base == 4.*