name:                cmaes
version:             0.1.0.0
synopsis:            CMA-ES wrapper in Haskell
description:
  @cmaes@ is a wrapper for Covariance Matrix Adaptation Evolution
  Strategy(CMA-ES), an evolutionary algorithm for difficult non-linear
  non-convex optimization problems in continuous domain. To use this
  package you need python2 available on your system. The package
  includes @cma.py@ , Nikolaus Hansen's production-level CMA library:
  <http://www.lri.fr/~hansen/cmaes_inmatlab.html#python>.

license:             OtherLicense
license-file:        LICENSE
author:              Takayuki Muranushi
maintainer:          muranushi@gmail.com
category:            Numerical, Optimization, Algorithms
build-type:          Simple
cabal-version:       >=1.8


Data-Files:          cma.py, cma_wrapper.py

library
  exposed-modules:   Numeric.Optimization.Algorithms.CMAES  
  -- other-modules:       
  build-depends:     base ==4.*
                   , process

Test-Suite test
  Main-Is:           Test.hs
  Hs-Source-Dirs:    test, .
  Type:              exitcode-stdio-1.0
  Build-Depends:     base == 4.*
                   , cmaes
                   , process
